--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.0
-gunicorn==21.2.0
+flask==3.0.0
 flask-socketio==5.3.6
 eventlet==0.33.3
+gunicorn==21.2.0
+setuptools  # هذه المكتبة ستحل مشكلة distutils التي تظهر في الصورة
