--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ flask==3.0.0
 flask-socketio==5.3.6
 eventlet==0.33.3
 gunicorn==21.2.0
-setuptools  # هذه المكتبة ستحل مشكلة distutils التي تظهر في الصورة
+flask-mail==0.9.1
+setuptools
