--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,37 +1,26 @@
-name: Full Android Build
+name: Mobile APK Build
 on: [push]
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      - name: Create Android Structure
+      - name: Install Tools
         run: |
-          # هذه الأوامر تقوم بتوليد المجلدات المفقودة (الهيكل)
-          npx react-native init TempApp --skip-install
-          cp -r TempApp/android .
-          cp TempApp/gradlew .
-          cp -r TempApp/gradle .
+          npm install -g expo-cli
+          # إنشاء هيكل خفيف لا يمسح ملفاتك
+          npx expo prebuild --platform android --yes
+      - name: Build Debug APK
+        run: |
+          cd android
           chmod +x gradlew
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
-      - name: Build APK
-        run: ./gradlew assembleDebug
-
-      - name: Upload Finished APK
+          ./gradlew assembleDebug
+      - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
-          name: Oasis-App-Ready
+          name: oasis-app-final
           path: android/app/build/outputs/apk/debug/*.apk
