--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,4 +1,4 @@
-name: Mobile APK Build
+name: Final APK Build
 on: [push]
 jobs:
   build:
@@ -9,18 +9,24 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Install Tools
+      - name: Build Global Package
         run: |
-          npm install -g expo-cli
-          # إنشاء هيكل خفيف لا يمسح ملفاتك
-          npx expo prebuild --platform android --yes
-      - name: Build Debug APK
-        run: |
-          cd android
+          # إنشاء مشروع نظيف مؤقت لتوليد الهيكل
+          npx react-native init TempProject --skip-install --version 0.72.3
+          # نقل ملفات الأندرويد والـ Gradle للخارج
+          cp -r TempProject/android .
+          cp TempProject/gradlew .
+          cp -r TempProject/gradle .
           chmod +x gradlew
-          ./gradlew assembleDebug
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Build Android APK
+        run: ./gradlew assembleDebug
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
-          name: oasis-app-final
+          name: Oasis-App-Final
           path: android/app/build/outputs/apk/debug/*.apk
