--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "oasis-server",
+  "name": "oasis-app",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android"
+  },
   "dependencies": {
+    "expo": "~50.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "crypto-js": "^4.1.1"
+    "react-native": "0.73.4",
+    "crypto-js": "^4.2.0"
   }
 }
