--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,34 @@
-name: Emergency-Fast-Build
+name: Oasis-Final-Success
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
-      - name: Setup Expo
-        run: npx expo install
-      - name: Build Android Structure
-        run: npx expo prebuild --platform android --yes
-      - name: Fast Java Setup
+          node-version: 20
+      - name: Install Expo Global
+        run: npm install -g expo-cli
+      - name: Install Dependencies
+        run: |
+          # هذا السطر سيحل مشكلة الصورة رقم 22
+          npm install
+          npm install expo
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Run Gradle Build
+      - name: Prebuild and Assemble
         run: |
+          npx expo prebuild --platform android --yes
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
-      - name: Get My APK
+      - name: Upload Finished APK
         uses: actions/upload-artifact@v4
         with:
-          name: OasisApp-Success
+          name: Oasis-Secure-App
           path: android/app/build/outputs/apk/debug/*.apk
