--- a/app.json
+++ b/app.json
@@ -3,15 +3,14 @@
     "name": "Oasis",
     "slug": "oasis-app",
     "version": "1.0.0",
+    "sdkVersion": "50.0.0",
     "android": {
       "package": "com.oasis.secure",
       "permissions": [
         "CAMERA",
         "RECORD_AUDIO",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "MODIFY_AUDIO_SETTINGS"
       ]
     }
   }
 }
-
