--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "oasis-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android"
-  },
   "dependencies": {
     "expo": "~50.0.0",
-    "react": "18.2.0",
     "react-native": "0.73.4",
-    "crypto-js": "^4.2.0",
-    "expo-permissions": "~14.4.0",
-    "expo-camera": "~14.1.1",
-    "expo-av": "~13.10.5"
+    "react-native-webrtc": "118.0.0",
+    "socket.io-client": "^4.7.2"
   }
 }
