--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
+  "name": "oasis-app",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
   "dependencies": {
     "expo": "~50.0.0",
-    "react-native": "0.73.4",
-    "eas-cli": "latest"
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.2",
+    "crypto-js": "^4.2.0",
+    "socket.io-client": "^4.7.4",
+    "expo-image-picker": "~14.7.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
-  "scripts": {
-    "build:android": "eas build --platform android --profile preview"
-  }
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
