--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,20 @@
-"build": {
-  "Preview": {
-    "android": {
-      "buildType": "apk"
-    }
+{
+  "cli": {
+    "version": ">= 6.2.0"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "Preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "production": {}
+  },
+  "submit": {
+    "production": {}
   }
 }
