--- a/eas.json
+++ b/eas.json
@@ -1,18 +1,21 @@
 {
   "cli": {
-    "version": ">= 6.2.0"
+    "version": ">= 7.0.0"
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal"
     },
-    "Preview": {
+    "preview": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "credentialsSource": "remote"
       }
     },
-    "production": {}
+    "production": {
+      "credentialsSource": "remote"
+    }
   },
   "submit": {
     "production": {}
