--- a/package.json
+++ b/package.json
@@ -1,13 +1,3 @@
-{
-  "name": "oasis-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
   "dependencies": {
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
@@ -19,10 +9,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "zego-uikit-prebuilt-call-rn": "2.1.0",
+    "zego-uikit-rn": "2.1.0",
+    "expo-av": "~13.10.5"
   },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
-}
