--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react-native-screens": "~3.29.0",
     "zego-uikit-prebuilt-call-rn": "2.1.0",
     "zego-uikit-rn": "2.1.0",
-    "expo-av": "~13.10.5"
+    "zego-uikit-signaling-plugin-rn": "^2.1.0",
+    "expo-av": "~13.10.5",
+    "firebase": "^10.7.1",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
