--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "oasis-app",
+    "name": "Oasis App",
     "slug": "oasis-app",
     "version": "1.0.0",
     "owner": "aboahj",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0b141a"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -18,9 +18,22 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#0b141a"
       },
-      "package": "com.aboahj.oasisapp"
+      "package": "com.oasis.app2026",
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "USE_FULL_SCREEN_INTENT",
+        "SCHEDULE_EXACT_ALARM",
+        "VIBRATE",
+        "FOREGROUND_SERVICE",
+        "WAKE_LOCK",
+        "DISABLE_KEYGUARD"
+      ]
+    },
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.oasis.app2026"
     },
     "extra": {
       "eas": {
