--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  "dependencies": {
+"dependencies": {
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -10,10 +10,13 @@
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "zego-uikit-prebuilt-call-rn": "2.1.0",
-    "zego-uikit-rn": "2.1.0",
-    "zego-uikit-signaling-plugin-rn": "^2.1.0",
+    "zego-uikit-prebuilt-call-rn": "latest",
+    "zego-uikit-rn": "latest",
+    "zego-uikit-signaling-plugin-rn": "latest",
     "expo-av": "~13.10.5",
+    "expo-notifications": "~0.27.6",
+    "expo-device": "~5.9.3",
+    "expo-constants": "~15.4.5",
     "firebase": "^10.7.1",
     "@react-native-async-storage/async-storage": "1.18.2"
   },
