--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-"dependencies": {
+{
+  "dependencies": {
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -6,6 +7,7 @@
     "crypto-js": "^4.2.0",
     "socket.io-client": "^4.7.4",
     "expo-image-picker": "~14.7.1",
+    "react-native-webview": "13.6.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
@@ -19,4 +21,5 @@
     "expo-constants": "~15.4.5",
     "firebase": "^10.7.1",
     "@react-native-async-storage/async-storage": "1.18.2"
-  },
+  }
+}
