--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "expo-device": "~5.9.3",
     "expo-constants": "~15.4.5",
     "firebase": "^10.7.1",
-    "@react-native-async-storage/async-storage": "1.18.2"
-  }
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "react-native-get-random-values": "~1.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
