--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==3.0.0
-flask-socketio==5.3.6
-flask-cors==4.0.0
-eventlet==0.33.3
-gunicorn==21.2.0
-flask-mail==0.9.1
-python-dotenv==1.0.0
-requests==2.31.0
+Flask>=3.0.0
+flask-socketio>=5.3.6
+flask-cors>=4.0.0
+eventlet>=0.33.3
+gunicorn>=21.2.0
+flask-mail>=0.9.1
+python-dotenv>=1.0.0
+requests>=2.31.0
 setuptools
 dnspython
