--- a/app.json
+++ b/app.json
@@ -20,7 +20,13 @@
         "expo-image-picker",
         {
           "photosPermission": "يسمح لك التطبيق باختيار الصور ومقاطع الفيديو لمشاركتها مع أصدقائك.",
-          "cameraPermission": "يسمح لك التطبيق باستخدام الكاميرا لالتقاط الصور وإجراء مكالمات الفيديو."
+          "cameraPermission": "يسمح لك التطبيق باستخدام الكاميرا لالتقاط الصور وتحديث حالتك وإجراء مكالمات الفيديو."
+        }
+      ],
+      [
+        "expo-audio",
+        {
+          "microphonePermission": "نحتاج للوصول للميكروفون لتسجيل الرسائل الصوتية وإجراء المكالمات."
         }
       ],
       [
@@ -68,9 +74,9 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.oasis.app2026",
       "infoPlist": {
-        "NSCameraUsageDescription": "نحتاج للوصول للكاميرا لإجراء مكالمات الفيديو والتقاط الصور.",
-        "NSMicrophoneUsageDescription": "نحتاج للوصول للميكروفون لإجراء المكالمات الصوتية وتسجيل الفيديوهات.",
-        "NSPhotoLibraryUsageDescription": "نحتاج للوصول لمكتبة الصور لتتمكن من إرسال الصور ومقاطع الفيديو."
+        "NSCameraUsageDescription": "نحتاج للوصول للكاميرا لالتقاط صور الحالة وإجراء مكالمات الفيديو.",
+        "NSMicrophoneUsageDescription": "نحتاج للوصول للميكروفون لتسجيل الرسائل الصوتية وإجراء المكالمات.",
+        "NSPhotoLibraryUsageDescription": "نحتاج للوصول لمكتبة الصور لتتمكن من اختيار ومشاركة الصور ومقاطع الفيديو."
       }
     },
     "extra": {
