--- a/app.json
+++ b/app.json
@@ -24,9 +24,10 @@
         }
       ],
       [
-        "expo-audio",
+        "expo-av",
         {
-          "microphonePermission": "نحتاج للوصول للميكروفون لتسجيل الرسائل الصوتية وإجراء المكالمات."
+          "microphonePermission": "نحتاج للوصول للميكروفون لتسجيل الرسائل الصوتية وإجراء المكالمات.",
+          "cameraPermission": "يسمح لك التطبيق باستخدام الكاميرا لالتقاط الصور وتحديث حالتك وإجراء مكالمات الفيديو."
         }
       ],
       [
