--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
       [
         "react-native-webview",
         {}
+      ],
+      [
+        "@zegocloud/zego-uikit-prebuilt-call-rn",
+        {
+          "ringtone": "ringtone.mp3"
+        }
       ]
     ],
     "android": {
@@ -56,7 +62,9 @@
         "DISABLE_KEYGUARD",
         "INTERNET",
         "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "WRITE_EXTERNAL_STORAGE",
+        "SYSTEM_ALERT_WINDOW",
+        "BLUETOOTH_CONNECT"
       ],
       "intentFilters": [
         {
@@ -77,7 +85,12 @@
       "infoPlist": {
         "NSCameraUsageDescription": "نحتاج للوصول للكاميرا لالتقاط صور الحالة وإجراء مكالمات الفيديو.",
         "NSMicrophoneUsageDescription": "نحتاج للوصول للميكروفون لتسجيل الرسائل الصوتية وإجراء المكالمات.",
-        "NSPhotoLibraryUsageDescription": "نحتاج للوصول لمكتبة الصور لتتمكن من اختيار ومشاركة الصور ومقاطع الفيديو."
+        "NSPhotoLibraryUsageDescription": "نحتاج للوصول لمكتبة الصور لتتمكن من اختيار ومشاركة الصور ومقاطع الفيديو.",
+        "UIBackgroundModes": [
+          "voip",
+          "audio",
+          "fetch"
+        ]
       }
     },
     "extra": {
