--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "oasis-app",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
+  },
   "dependencies": {
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
@@ -12,9 +21,9 @@
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "zego-uikit-prebuilt-call-rn": "latest",
-    "zego-uikit-rn": "latest",
-    "zego-uikit-signaling-plugin-rn": "latest",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "4.1.7",
+    "zego-uikit-rn": "2.1.4",
+    "zego-uikit-signaling-plugin-rn": "2.1.4",
     "expo-av": "~13.10.5",
     "expo-notifications": "~0.27.6",
     "expo-device": "~5.9.3",
