--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "4.1.10",
-    "zego-uikit-rn": "2.1.2",
-    "zego-uikit-signaling-plugin-rn": "2.1.2",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.1.10",
+    "zego-uikit-rn": "^2.1.2",
+    "zego-uikit-signaling-plugin-rn": "^2.1.2",
     "expo-av": "~13.10.5",
     "expo-notifications": "~0.27.6",
     "expo-device": "~5.9.3",
