--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.6.1",
-    "zego-uikit-rn": "^2.19.1",
-    "zego-uikit-signaling-plugin-rn": "^2.19.1",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "4.16.4",
+    "@zegocloud/zego-uikit-rn": "2.23.0",
+    "zego-uikit-signaling-plugin-rn": "2.23.0",
+    "zego-zim-react-native": "^2.12.0",
+    "zego-zpns-react-native": "^2.6.0",
     "expo-av": "~13.10.5",
     "expo-notifications": "~0.27.6",
     "expo-device": "~5.9.3",
