--- a/package.json
+++ b/package.json
@@ -13,23 +13,18 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "crypto-js": "^4.2.0",
-    "socket.io-client": "^4.7.4",
     "expo-image-picker": "~14.7.1",
     "react-native-webview": "13.6.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "4.16.4",
-    "@zegocloud/zego-uikit-rn": "2.23.0",
-    "zego-uikit-signaling-plugin-rn": "2.23.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.16.4",
+    "@zegocloud/zego-uikit-rn": "^2.23.0",
+    "zego-uikit-signaling-plugin-rn": "^2.23.0",
     "zego-zim-react-native": "^2.12.0",
     "zego-zpns-react-native": "^2.6.0",
     "expo-av": "~13.10.5",
-    "expo-notifications": "~0.27.6",
-    "expo-device": "~5.9.3",
-    "expo-constants": "~15.4.5",
     "firebase": "^10.8.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "react-native-get-random-values": "~1.10.0"
