--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "react-native": "0.73.2",
     "expo-image-picker": "~14.7.1",
     "react-native-webview": "13.6.4",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native": "^6.x",
+    "@react-navigation/stack": "^6.x",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.16.0",
-    "@zegocloud/zego-uikit-rn": "^2.23.0",
-    "zego-uikit-signaling-plugin-rn": "^2.23.0",
-    "zego-zim-react-native": "^2.12.0",
-    "zego-zpns-react-native": "^2.6.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "latest",
+    "@zegocloud/zego-uikit-rn": "latest",
+    "zego-uikit-signaling-plugin-rn": "latest",
+    "zego-zim-react-native": "latest",
+    "zego-zpns-react-native": "latest",
     "expo-av": "~13.10.5",
     "firebase": "^10.8.0",
     "@react-native-async-storage/async-storage": "1.21.0",
