--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
+{
+  "name": "oasis-app",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
@@ -19,3 +23,4 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "react-native-get-random-values": "~1.10.0"
   }
+}
