--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "4.16.1",
-    "@zegocloud/zego-uikit-rn": "2.23.0",
-    "zego-uikit-signaling-plugin-rn": "2.23.0",
-    "zego-zim-react-native": "2.12.1",
-    "zego-zpns-react-native": "2.6.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.16.0",
+    "@zegocloud/zego-uikit-rn": "^2.23.0",
+    "zego-uikit-signaling-plugin-rn": "^2.23.0",
+    "zego-zim-react-native": "^2.12.0",
+    "zego-zpns-react-native": "^2.6.0",
     "expo-av": "~13.10.5",
     "firebase": "^10.8.0",
     "@react-native-async-storage/async-storage": "1.21.0",
