--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Oasis App Build
 on:
   push:
     branches:
-      - main  # أو اسم الفرع الذي تستخدمه (مثلاً master)
+      - main
   workflow_dispatch:
 
 jobs:
@@ -18,33 +18,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          # حذفنا سطر الكاش هنا لتجاوز مشكلة الـ lock file المفقود
 
-      - name: 3. Clean and Reset Environment
+      - name: 3. Reset and Install (The Ultimate Fix)
         run: |
-          echo "Cleaning cache and old files..."
           npm cache clean --force
-          rm -rf node_modules
-          rm -f package-lock.json
-
-      - name: 4. Install Dependencies (The Fix)
-        run: |
-          echo "Installing dependencies with legacy-peer-deps to fix ZegoCloud conflict..."
           npm install --legacy-peer-deps
 
-      - name: 5. Setup EAS CLI
+      - name: 4. Setup EAS CLI
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 6. Build Android APK (Preview)
+      - name: 5. Build Android APK
         run: |
-          # تأكد من أن بروفايل preview موجود في eas.json الخاص بك
           eas build --platform android --profile preview --local
 
-      - name: 7. Upload Artifact
+      - name: 6. Upload Result
         uses: actions/upload-artifact@v4
         with:
-          name: Oasis-Build
+          name: Oasis-App-APK
           path: ./*.apk
