--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/stack": "^6.3.20",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "6.11.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "6.6.8",
     "@zegocloud/zego-uikit-rn": "2.19.1",
     "@zegocloud/zego-uikit-signaling-plugin-rn": "1.3.8",
     "zego-zim-react-native": "2.12.0",
@@ -21,7 +21,9 @@
     "expo-av": "~13.10.5",
     "firebase": "^10.8.0",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "react-native-get-random-values": "~1.10.0"
+    "react-native-get-random-values": "~1.10.0",
+    "expo-notifications": "~0.27.6",
+    "expo-permissions": "~14.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
